--- a/package.json
+++ b/package.json
@@ -10,10 +10,9 @@
     "test": "jest --watch"
   },
   "dependencies": {
-    "@types/node": "18.11.13",
+    "@testing-library/react": "^13.4.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
     "eslint-config-next": "13.0.6",
     "next": "13.0.6",
     "react": "18.2.0",
@@ -21,10 +20,18 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@testing-library/react": "^13.4.0",
     "@types/jest": "^29.2.4",
+    "@types/node": "^18.11.13",
+    "@typescript-eslint/eslint-plugin": "^5.46.0",
+    "@typescript-eslint/parser": "^5.46.0",
     "autoprefixer": "^10.4.13",
+    "eslint": "^8.29.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-jest-dom": "^4.0.3",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-testing-library": "^5.9.1",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
