--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@prisma/client": "^4.7.1",
     "@testing-library/react": "^13.4.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
@@ -37,6 +38,7 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "postcss": "^8.4.19",
+    "prisma": "^4.7.1",
     "tailwindcss": "^3.2.4",
     "ts-jest": "^29.0.3",
     "ts-node": "^10.9.1"
