--- a/package.json
+++ b/package.json
@@ -11,19 +11,29 @@
     "test:ci": "jest --ci"
   },
   "dependencies": {
+    "@hookform/error-message": "^2.0.1",
     "@prisma/client": "^4.7.1",
+    "@react-google-maps/api": "^2.17.1",
     "@testing-library/react": "^13.4.0",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "classnames": "^2.3.2",
     "eslint-config-next": "13.0.6",
+    "lodash": "^4.17.21",
+    "luxon": "^3.2.1",
     "next": "13.0.6",
     "react": "18.2.0",
+    "react-cool-onclickoutside": "^1.7.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4"
+    "react-feather": "^2.0.10",
+    "react-hook-form": "^7.40.0",
+    "typescript": "4.9.4",
+    "use-places-autocomplete": "^4.0.0"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.51.0",
     "@types/jest": "^29.2.4",
+    "@types/lodash": "^4.14.191",
     "@types/node": "^18.11.13",
     "@typescript-eslint/eslint-plugin": "^5.46.0",
     "@typescript-eslint/parser": "^5.46.0",
